# hide_and_seek

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  design_notes.md  docker-compose.yml  rulebook.md  run.sh
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: admin.py  auth.py  routes.py  websocket.py
backend/app/core/: config.py  security.py
backend/app/db/: crud.py  database.py  models.py
backend/app/game/: ai.py  cards.py  engine.py  models.py
cards/: kid_cards.md  playground_cards.md
frontend/: admin.html  index.html
frontend/css/: styles.css
frontend/js/: app.js  game.js  ws.js
